# Kopytko

./: AppsMain.cpp  AppsMain.h  CMakeLists.txt  Session.cpp  Session.h  main.cpp
AI/: FaceModel.cpp  FaceModel.h  FaceRecognizer.cpp  FaceRecognizer.h
DataProcessing/: DataProcessor.cpp  DataProcessor.h
Debug/: Log.cpp  Log.h
HWDrivers/: Camera.cpp  Camera.h
Logic/: Notification.cpp  Notification.h  PhoneNotification.cpp  PhoneNotification.h
Logic/AI/: FaceFinder.cpp  FaceFinder.h  FaceModel.cpp  FaceModel.h  FaceRecognizer.cpp  FaceRecognizer.h  VoiceRecognizer.cpp  VoiceRecognizer.h
Logic/AI/FaceRecognition/: FaceFinder.h  FaceNetTemplate.h  FaceRecognizer.cpp  FaceRecognizer.h
Logic/AI/SpeechRecognition/: SpectrumGatherer.h  SpeechListener.cpp  SpeechListener.h  TriggerWordDetector.cpp  TriggerWordDetector.h
Logic/AI/VoiceRecognition/: SpectrumGatherer.cpp  SpectrumGatherer.h  VoiceRecognizer.cpp  VoiceRecognizer.h
Logic/HWDrivers/: BluetoothManager.cpp  BluetoothManager.h  Camera.cpp  SoundRecorder.cpp  SoundRecorder.h
Logic/Misc/: TalkManager.h  Thread.cpp  Thread.h
Logic/Peripherals/: HomeConnectionManager.cpp  HomeConnectionManager.h  PhoneConnectionManager.cpp  PhoneConnectionManager.h
Misc/: CMakeLists.txt  Clock.cpp  Clock.h  ExtString.cpp  ExtString.h  GlobalLog.cpp  GlobalLog.h  TalkManager.cpp  Thread.cpp  Thread.h
UI/: AppMain.cpp  AppMain.h  AppMainWindow.cpp  AppMainWindow.h  AsyncTask.cpp  AsyncTask.h  Context.cpp  Context.h  Layout.h  MainContext.cpp  MainContext.h  UI.cpp  UI.h  User.cpp  User.h  Voice.cpp  Voice.h
UI/Boxes/: DebugBox.cpp  DebugBox.h
UI/Views/: BatteryView.cpp  BatteryView.h  CPUTempView.cpp  CPUTempView.h  ClockView.cpp  ClockView.h  DebugView.cpp  DebugView.h  Header.h  HeartbeatView.cpp  HeartbeatView.h  ICMWeatherView.cpp  ICMWeatherView.h  NotificationEntryView.cpp  NotificationEntryView.h  NotificationListView.cpp  NotificationListView.h
data/: cities_latlng  known_faces
data/users/: user2  user3
